--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: jira
     image: atlassian/jira-software:8
     volumes:
-      - /home/devsecops/Docker/volumes/atlassian/jira:/var/atlassian/application-data/jira
+      - ~/volumes/atlassian/jira:/var/atlassian/application-data/jira
     environment:
        ATL_PROXY_NAME: jira.fires.division
        ATL_PROXY_PORT: 80
@@ -20,7 +20,7 @@ services:
     container_name: confluence
     image: atlassian/confluence-server:7
     volumes:
-      - /home/devsecops/Docker/volumes/atlassian/confluence:/var/atlassian/application-data/confluence
+      - ~/volumes/atlassian/confluence:/var/atlassian/application-data/confluence
     environment: 
       ATL_PROXY_NAME: confluence.fires.division
       ATL_PROXY_PORT: 80
@@ -36,7 +36,7 @@ services:
     ports:
      - "7999:7999"
     volumes:
-      - /home/devsecops/Docker/volumes/atlassian/bitbucket:/var/atlassian/application-data/bitbucket
+      - ~/volumes/atlassian/bitbucket:/var/atlassian/application-data/bitbucket
     environment: 
       SERVER_PROXY_NAME: bitbucket.fires.division
       SERVER_PROXY_PORT: 80
@@ -50,8 +50,7 @@ services:
     container_name: jenkins
     image: jenkins/jenkins:lts
     volumes:
-    #  - /home/devsecops/Docker/volumes/jenkins/db:/data/db
-      - /home/devsecops/Docker/volumes/jenkins/home:/var/jenkins_home
+      - ~/volumes/jenkins/home:/var/jenkins_home
     #ports:
     #  - "8081:8081"
     #  - "50000:50000"
@@ -64,7 +63,7 @@ services:
     container_name: nexus
     image: sonatype/nexus3:3.30.0
     volumes:
-      - /home/devsecops/Docker/volumes/nexus/nexus-data:/nexus-data
+      - ~/volumes/nexus/nexus-data:/nexus-data
     #ports:
     #  - 8081:8081
     networks:
@@ -77,7 +76,7 @@ services:
     #  - "5432:5432"
     volumes:
       - ./config/postgres:/docker-entrypoint-initdb.d
-      - /home/devsecops/Docker/volumes/postgres/data/10:/var/lib/postgresql/data
+      - ~/volumes/postgres/data/10:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: qwerQWER
     networks:
