--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,19 @@ services:
     depends_on:
       - db
 
+  bamboo:
+    container_name: bamboo
+    image: atlassian/bamboo-server:7
+    ports:
+      - "54663:54663"
+      - "8085:8085"
+    volumes:
+      - ~/volumes/atlassian/bamboo:/var/atlassian/application-data/bamboo
+    networks:
+      - devsecopsnet
+    depends_on:
+      - db
+
   jenkins:
     container_name: jenkins
     image: jenkins/jenkins:lts
@@ -91,6 +104,7 @@ services:
      - jira 
      - confluence 
      - bitbucket 
+     - bamboo
      - jenkins
      - nexus
     ports: 
@@ -105,6 +119,7 @@ services:
          - bitbucket.fires.division
          - jenkins.fires.division
          - nexus.fires.division
-
+         - bamboo.fires.division
+         
 networks:
   devsecopsnet:
