--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -16,57 +16,222 @@ events {
 
 http {
 
- ## JIRA PROXY CONFIGURATION
- server {
-   listen 80;
-   server_name jira.fires.division;
-   proxy_read_timeout 600s;
-   location / {
-     proxy_set_header X-Forwarded-Host $host;
-     proxy_set_header X-Forwarded-Server $host;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     proxy_pass http://jira:8080;
-     client_max_body_size 10M;
-   }
- }
+  server {
+    listen 80 default_server;
+    server_name "";
+    return 502;
+  }
 
- ## CONFLUENCE PROXY CONFIGURATION
- server {
-   listen 80;
-   server_name confluence.fires.division;
-   proxy_read_timeout 600s;
-   location / {
-     proxy_set_header X-Forwarded-Host $host;
-     proxy_set_header X-Forwarded-Server $host;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     proxy_pass http://confluence:8090;
-     client_max_body_size 10M;
-   }
- }
+  ########################
+  ## JIRA CONFIGURATION ##
+  ########################
 
- ## BITBUCKET PROXY CONFIGURATION
- server {
-   listen 80;
-   server_name bitbucket.fires.division;
-   proxy_read_timeout 600s;
-   location / {
-     proxy_set_header Host $host;
-     proxy_set_header X-Forwarded-Host $host;
-     proxy_set_header X-Forwarded-Server $host;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     proxy_pass http://bitbucket:7990;
-     client_max_body_size 0;
-     client_body_buffer_size 128K;
-     proxy_buffer_size 16k;
-     proxy_buffers 32 16k;
-     proxy_busy_buffers_size 64k;
-     proxy_connect_timeout 60;
-     proxy_intercept_errors on;
-     proxy_next_upstream error timeout;
-     proxy_redirect off;
-     proxy_send_timeout 90;
-   }
- }
+  ## JIRA HTTP REDIRECT CONFIGURATION
+  server {
+    listen 80;
+    server_name jira.fd;
+    return 301 https://$host$request_uri;
+  }
+ 
+  ## JIRA SSL CONFIGURATION
+  server {
+    listen 443 ssl;
+    server_name jira.fd;
+
+    ssl_certificate /etc/nginx/ssl/jira.fd.crt;
+    ssl_certificate_key /etc/nginx/ssl/jira.fd.key;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 5m;
+
+    location / {
+      proxy_set_header  X-Forwarded-Host $host;
+      proxy_set_header  X-Forwarded-Server $host;
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass        http://jira:8080;
+      client_max_body_size 0;
+    }
+  }
+
+  ##############################
+  ## CONFLUENCE CONFIGURATION ##
+  ##############################
+
+  ## CONFLUENCE HTTP REDIRECT CONFIGURATION
+  server {
+    listen 80;
+    server_name confluence.fd;
+    return 301 https://$host$request_uri;
+  }
+
+  ## CONFLUENCE SSL CONFIGURATION
+  server {
+    listen 443 ssl;
+    server_name confluence.fd;
+
+    ssl_certificate /etc/nginx/ssl/confluence.fd.crt;
+    ssl_certificate_key /etc/nginx/ssl/confluence.fd.key;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 5m;
+
+    location / {
+      proxy_set_header      X-Forwarded-Host $host;
+      proxy_set_header      X-Forwarded-Server $host;
+      proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass            http://confluence:8090;
+      client_max_body_size  0;
+    }
+  }
+
+  #############################
+  ## BITBUCKET CONFIGURATION ##
+  #############################
+
+  ## BITBUCKET HTTP REDIRECT CONFIGURATION
+  server {
+    listen 80;
+      server_name bitbucket.fd;
+      return 301 https://$host$request_uri;
+  }
+
+  ## BITUBKCET SSL CONFIGURATION
+  server {
+    listen 443 ssl;
+    server_name bitbucket.fd;
+
+    ssl_certificate /etc/nginx/ssl/bitbucket.fd.crt;
+    ssl_certificate_key /etc/nginx/ssl/bitbucket.fd.key;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 5m;
+
+    location / {
+      proxy_set_header       Host $host;
+      proxy_set_header        X-Forwarded-Host $host;
+      proxy_set_header        X-Forwarded-Server $host;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      client_max_body_size    0;
+      client_body_buffer_size 128K;
+      proxy_buffer_size       16k;
+      proxy_buffers           32 16k;
+      proxy_busy_buffers_size 64k;
+      proxy_connect_timeout   60;
+      proxy_intercept_errors  on;
+      proxy_next_upstream     error timeout;
+      proxy_redirect          off;
+      proxy_send_timeout      90;
+      proxy_pass              http://bitbucket:7990;
+    }
+  }
+
+  #########################
+  ## NEXUS CONFIGURATION ##
+  #########################
+
+  ## NEXUS HTTP REDIRECT CONFIGURATION
+  server {
+    listen 80;
+    server_name nexus.fd;
+    return 301 https://$host$request_uri;
+  }
+
+  ## NEXUS SSL CONFIGURATION
+  server {
+    listen 443 ssl;
+    server_name nexus.fd;
+
+    ssl_certificate /etc/nginx/ssl/nexus.fd.crt;
+    ssl_certificate_key /etc/nginx/ssl/nexus.fd.key;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 5m;
+
+    location / {
+      proxy_pass        http://nexus:8081;
+      proxy_redirect    off;
+      proxy_set_header  Host $host:$server_port;
+      proxy_set_header  X-Real-IP $remote_addr;
+      proxy_set_header  X-Forwarded-Proto $scheme;
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header  X-Forwarded-Port $server_port;
+      proxy_set_header  X-Forwarded-Host $host;
+      proxy_set_header  X-Forwarded-Server $server_name;
+      client_max_body_size 0;
+    }
+  }
+
+  ## NEXUS REPO.FD CONFIGURATION
+  server {
+    listen       443 ssl;
+    server_name  repo.fd;
+
+    ssl_certificate       /etc/nginx/ssl/repo.fd.crt;
+    ssl_certificate_key   /etc/nginx/ssl/repo.fd.key;
+
+    ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers                 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers   on;
+    ssl_session_cache           shared:SSL:10m;
+    ssl_session_timeout         5m;
+
+    location / {
+      proxy_pass        http://nexus:9001;
+      proxy_redirect    off;
+      proxy_set_header  Host $host:$server_port;
+      proxy_set_header  X-Real-IP $remote_addr;
+      proxy_set_header  X-Forwarded-Proto $scheme;
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header  X-Forwarded-Port $server_port;
+      proxy_set_header  X-Forwarded-Host $host;
+      proxy_set_header  X-Forwarded-Server $server_name;
+      client_max_body_size 0;
+    }
+  }
+
+  ## NEXUS REGISTRY-1 CONFIGURATION
+  server {
+    listen       443 ssl;
+    server_name  registry-1.fd;
+
+    ssl_certificate       /etc/nginx/ssl/registry-1.fd.crt;
+    ssl_certificate_key   /etc/nginx/ssl/registry-1.fd.key;
+
+    ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers                 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers   on;
+    ssl_session_cache           shared:SSL:10m;
+    ssl_session_timeout         5m;
+
+    location / {
+      proxy_pass        http://nexus:9000;
+      proxy_redirect    off;
+      proxy_set_header  Host $host:$server_port;
+      proxy_set_header  X-Real-IP $remote_addr;
+      proxy_set_header  X-Forwarded-Proto $scheme;
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header  X-Forwarded-Port $server_port;
+      proxy_set_header  X-Forwarded-Host $host;
+      proxy_set_header  X-Forwarded-Server $server_name;
+      client_max_body_size 0;
+    }
+  }
+
+  ###########################
+  ## BAMBOO CONFIGURATION ##
+  ###########################
 
 # server {
 #   listen 7999;
@@ -81,7 +246,9 @@ http {
 #   }
 # }
 
- ## JENKINS PROXY CONFIGURATION
+  ###########################
+  ## JENKINS CONFIGURATION ##
+  ###########################
 
  # upstream jenkinssvr 
  # keepalive 32; # keepalive connections
@@ -89,14 +256,33 @@ http {
  # 
 
  # Required for Jenkins websocket agents
- map $http_upgrade $connection_upgrade { 
-  default upgrade;
-  '' close;
- }
+  map $http_upgrade $connection_upgrade { 
+    default upgrade;
+    '' close;
+  }
+
+  server {
+    listen 80;
+    server_name jenkins.fd;
+    return 301 $host$request_uri;
+  }
 
  server {
-  listen 80;       # Listen on port 80 for IPv4 requests
-  server_name jenkins.fires.division;  # replace 'jenkins.example.com' with your server domain name
+  #listen 80;       # Listen on port 80 for IPv4 requests
+  #server_name jenkins.fires.division;  # replace 'jenkins.example.com' with your server domain name
+
+  listen 443 ssl;
+  server_name jenkins.fd;
+
+  ssl_certificate /etc/nginx/ssl/jenkins.fd.crt;
+  ssl_certificate_key /etc/nginx/ssl/jenkins.fd.key;
+
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_timeout 5m;
+  
   # this is the jenkins web root directory
   # (mentioned in the /etc/default/jenkins file)
   root            /var/run/jenkins/war/;
@@ -149,38 +335,6 @@ http {
       proxy_buffering            off;
       proxy_request_buffering    off; # Required for HTTP CLI commands
       proxy_set_header Connection ""; # Clear for keepalive
-    }
-  }
-
-## NEXUS PROXY CONFIGURATION
-  server {
-    listen 80;
-    server_name nexus.fires.division;
-    proxy_read_timeout 600s;
-    location / {
-      proxy_pass        http://nexus:8081;
-      proxy_redirect    off;
-      proxy_set_header  Host $host;
-      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header  X-Forwarded-Host $host;
-      proxy_set_header  X-Forwarded-Proto $scheme;
-      proxy_set_header  X-Forwarded-Server $host;
-      client_max_body_size 0;
-    }
-  }
-
-  server {
-    listen 5000;
-    server_name nexus.fires.division;
-    proxy_read_timeout 600s;
-    location / {
-      proxy_pass        http://nexus:5000;
-      proxy_redirect    off;
-      proxy_set_header  Host $host;
-      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header  X-Forwarded-Host $host;
-      proxy_set_header  X-Forwarded-Proto $scheme;
-      proxy_set_header  X-Forwarded-Server $host;
     }
   }
 }
