Fixed SSL and HTTPS Redirect for Traefik Configuration

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: traefik
     image: traefik:v2.6
     command:
-      #- --log.level=DEBUG
+      # - --log.level=DEBUG
       # Global
       - --global.checknewversion=false
       - --global.sendAnonymousUsage=false
@@ -22,40 +22,49 @@ services:
       # Provider Info
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
-      # Certificate Resolver Info
-      #- --certificatesresolvers.le.acme.email=your@email.domain
-      #- --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
-      #- --certificatesresolvers.le.acme.tlschallenge=true
-    #labels:
-      # Middleware Redirect
-      #- "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
-      # Global HTTP -> HTTPS Redirect
-      #- "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
-      #- "traefik.http.routers.redirs.entrypoints=http"
-      #- "traefik.http.routers.redirs.middlewares=https-redirect"
+      - --providers.file.filename=/etc/traefik/dynamic/config.yml
+      - --providers.file.watch=true
+    labels:
+      - traefik.enable=true
+      # middleware redirect
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.port=8443
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true
+      # global redirect to https
+      - traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)
+      #- traefik.http.routers.http_catchall.rule=HostRegexp(`{any:.+}`)
+      - traefik.http.routers.http-catchall.entrypoints=web
+      - traefik.http.routers.http-catchall.middlewares=redirect-to-https
+
     ports:
       # The HTTP port
       - "8080:8080"
       # The Web UI (enabled by --api.insecure=true)
-      - "8081:8081"
-       # The HTTPS port
+      - "8081:8081" # The HTTPS port
       - "8443:8443"
     volumes:
-      # - ./config/traefik:/etc/traefik
+      - ./config/traefik:/etc/traefik
+      # - ./config/certs:/config/certs
+
+
+
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - traefik-proxy
 
   nginx:
-    container_name: nginx 
-    image: nginx:1.17 
+    container_name: nginx
+    image: nginx:1.17
     labels:
       - traefik.enable=true
-      - traefik.http.routers.ngnix.entrypoints=web
-      - traefik.http.routers.ngnix.rule=Host(`nginx.fires.division`)
-      - traefik.docker.network=traefik-proxy
-      # - traefik.http.services.ngnix.loadbalancer.server.port=80
+      #- traefik.docker.network=traefik-proxy
+      #- traefik.http.routers.ngnix.entrypoints=web
+      #- traefik.http.routers.ngnix.rule=Host(`nginx.fires.division`)
+      - traefik.http.routers.ngnix-ssl.entrypoints=websecure
+      - traefik.http.routers.ngnix-ssl.rule=Host(`nginx.fires.division`)
+      - traefik.http.routers.ngnix-ssl.tls=true
+      - traefik.http.services.ngnix.loadbalancer.server.port=80
     networks:
       - traefik-proxy
 
@@ -64,16 +73,25 @@ services:
     image: atlassian/jira-software:8
     labels:
       - traefik.enable=true
-      - traefik.http.routers.jira.entrypoints=web
-      - traefik.http.routers.jira.rule=Host(`jira.fires.division`)
+      #- traefik.docker.network=traefik-proxy
+      #- traefik.http.routers.jira.entrypoints=web
+      #- traefik.http.routers.jira.rule=Host(`jira.fires.division`)
+      - traefik.http.routers.jira-ssl.entrypoints=websecure
+      - traefik.http.routers.jira-ssl.rule=Host(`jira.fires.division`)
+      - traefik.http.routers.jira-ssl.tls=true
       - traefik.http.services.jira.loadbalancer.server.port=8080
-      - traefik.docker.network=traefik-proxy
     volumes:
       - jira:/var/atlassian/application-data/jira
     environment:
-       ATL_PROXY_NAME: jira.fires.division
-       ATL_PROXY_PORT: 8080
-       ATL_TOMCAT_SCHEME: http 
+      ATL_PROXY_NAME: jira.fires.division
+      #ATL_PROXY_PORT: 8080
+
+
+
+      #ATL_TOMCAT_SCHEME: http 
+      ATL_PROXY_PORT: 8443
+      ATL_TOMCAT_SCHEME: https
+      ATL_TOMCAT_SECURE: "true"
     networks:
       - traefik-proxy
     depends_on:
@@ -84,18 +102,24 @@ services:
     image: atlassian/confluence-server:7
     labels:
       - traefik.enable=true
-      - traefik.http.routers.confluence.entrypoints=web
-      - traefik.http.routers.confluence.rule=Host(`confluence.fires.division`)
+      #- traefik.docker.network=traefik-proxy
+      #- traefik.http.routers.confluence.entrypoints=web
+      #- traefik.http.routers.confluence.rule=Host(`confluence.fires.division`)
+      - traefik.http.routers.confluence-ssl.entrypoints=websecure
+      - traefik.http.routers.confluence-ssl.rule=Host(`confluence.fires.division`)
+      - traefik.http.routers.confluence-ssl.tls=true
       - traefik.http.services.confluence.loadbalancer.server.port=8090
-      - traefik.docker.network=traefik-proxy
     volumes:
       - confluence:/var/atlassian/application-data/confluence
-    environment: 
+    environment:
       ATL_PROXY_NAME: confluence.fires.division
-      ATL_PROXY_PORT: 8080
-      ATL_TOMCAT_SCHEME: http
+      #ATL_PROXY_PORT: 8080
+      #ATL_TOMCAT_SCHEME: http
+      ATL_PROXY_PORT: 8443
+      ATL_TOMCAT_SCHEME: https
+      ATL_TOMCAT_SECURE: "true"
     networks:
-       - traefik-proxy
+      - traefik-proxy
     depends_on:
       - db
 
@@ -104,18 +128,24 @@ services:
     image: atlassian/bitbucket-server:7
     labels:
       - traefik.enable=true
-      - traefik.http.routers.bitbucket.entrypoints=web
-      - traefik.http.routers.bitbucket.rule=Host(`bitbucket.fires.division`)
+      #- traefik.docker.network=traefik-proxy
+      #- traefik.http.routers.bitbucket.entrypoints=web
+      #- traefik.http.routers.bitbucket.rule=Host(`bitbucket.fires.division`)
+      - traefik.http.routers.bitbucket-ssl.entrypoints=websecure
+      - traefik.http.routers.bitbucket-ssl.rule=Host(`bitbucket.fires.division`)
+      - traefik.http.routers.bitbucket-ssl.tls=true
       - traefik.http.services.bitbucket.loadbalancer.server.port=7990
-      - traefik.docker.network=traefik-proxy
     ports:
-     - "7999:7999"
+      - "7999:7999"
     volumes:
       - bitbucket:/var/atlassian/application-data/bitbucket
-    environment: 
+    environment:
       SERVER_PROXY_NAME: bitbucket.fires.division
-      SERVER_PROXY_PORT: 8080
-      SERVER_SCHEME: http 
+      #SERVER_PROXY_PORT: 8080
+      #SERVER_SCHEME: http 
+      SERVER_PROXY_PORT: 8443
+      SERVER_SCHEME: https
+      SERVER_SECURE: "true"
     networks:
       - traefik-proxy
     depends_on:
@@ -126,26 +156,30 @@ services:
     image: jenkins/jenkins:lts
     labels:
       - traefik.enable=true
-      - traefik.http.routers.jenkins.entrypoints=web
-      - traefik.http.routers.jenkins.rule=Host(`jenkins.fires.division`)
+      #- traefik.docker.network=traefik-proxy
+      #- traefik.http.routers.jenkins.entrypoints=web
+      #- traefik.http.routers.jenkins.rule=Host(`jenkins.fires.division`)
+      - traefik.http.routers.jenkins-ssl.entrypoints=websecure
+      - traefik.http.routers.jenkins-ssl.rule=Host(`jenkins.fires.division`)
+      - traefik.http.routers.jenkins-ssl.tls=true
       - traefik.http.services.jenkins.loadbalancer.server.port=8080
-      - traefik.docker.network=traefik-proxy
-      # Middleware Redirect
-      #- traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
     volumes:
       - jenkins:/var/jenkins_home
     networks:
-      - traefik-proxy  
+      - traefik-proxy
 
   nexus:
     container_name: nexus
     image: sonatype/nexus3:3.37.3
     labels:
       - traefik.enable=true
-      - traefik.http.routers.nexus.entrypoints=web
-      - traefik.http.routers.nexus.rule=Host(`nexus.fires.division`)
+      #- traefik.docker.network=traefik-proxy  
+      #- traefik.http.routers.nexus.entrypoints=web
+      #- traefik.http.routers.nexus.rule=Host(`nexus.fires.division`)
+      - traefik.http.routers.nexus-ssl.entrypoints=websecure
+      - traefik.http.routers.nexus-ssl.rule=Host(`nexus.fires.division`)
+      - traefik.http.routers.nexus-ssl.tls=true
       - traefik.http.services.nexus.loadbalancer.server.port=8081
-      - traefik.docker.network=traefik-proxy  
     volumes:
       - nexus:/nexus-data
     networks:
