Update Dockerfiles for Updated Nexus Server

--- a/docker/msbuild/windows-20h2/Dockerfile
+++ b/docker/msbuild/windows-20h2/Dockerfile
@@ -1,29 +1,31 @@
 # escape=`
 
-FROM mcr.microsoft.com/windows:2004
+FROM repo.fires.division:8443/windows:20H2
 
 # Define Build Variables
 ARG SOFTWARE='C:/Software/'
 ARG CI_REPO='https://nexus.fires.division:8443/repository/fd-binaries'
-ARG CI_IPADDR='192.168.147.1'
+ARG CI_IPADDR='192.168.147.128'
 ARG BUILDTOOLS='VS_BuildTools_Offline_16.7.4.zip'
 
 SHELL ["cmd", "/S", "/C"]
-# TODO: Use CI_IPADDR isntead
-RUN echo 192.168.147.1 nexus.fires.division >> C:\windows\system32\drivers\etc\hosts
+# TODO: Use CI_IPADDR instead
+# TODO: Use CI_IPADDR Build Command Line Argument Instead
+# HACK because the --add-host=nexus.fires.division:192.168.148.128 rarely works, even with the --network="nat" option set.
+RUN echo 192.168.148.128 nexus.fires.division >> C:\windows\system32\drivers\etc\hosts
 
 # SHELL
 SHELL ["powershell", "-Command"]
 
 # Install Root Fires Division DevSecOps Certificate
-COPY ca.crt C:\Certificates\
+COPY config\ca.crt C:\Certificates\
 RUN Import-Certificate -FilePath C:\Certificates\ca.crt -CertStoreLocation cert:\LocalMachine\Root | Out-Null
 
 # Create new folder to store software ** MIGHT BE ABLE TO DELETE **
 RUN New-Item -Path "C:/" -Name "Software" -ItemType "directory" | Out-Null
 
 RUN $WC=New-Object System.Net.WebClient; `
-    $WC.DownloadFile($ENV:CI_REPO + '/docker/msbuildtools/' + $ENV:BUILDTOOLS, $ENV:SOFTWARE + $ENV:BUILDTOOLS); `
+    $WC.DownloadFile($ENV:CI_REPO + '/buildtools/' + $ENV:BUILDTOOLS, $ENV:SOFTWARE + $ENV:BUILDTOOLS); `
     Expand-Archive -Path "$ENV:SOFTWARE$ENV:BUILDTOOLS" -DestinationPath "C:/"; `
     Remove-Item "$ENV:SOFTWARE$ENV:BUILDTOOLS"
 
